--- a/SlugTrails/SlugTrails/Info.plist
+++ b/SlugTrails/SlugTrails/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location always on</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Turn on location when in use.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,5 +45,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Turn on location when in use.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Location always on</string>
 </dict>
 </plist>
